# CEGUI-demo

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/CEGUI/: Config.h
dependencies/lib/: CEGUIBase-0.exp  CEGUIBase-0_d.exp  CEGUICommonDialogs-0.exp  CEGUICommonDialogs-0_d.exp  CEGUICommonDialogsDemo.exp  CEGUICommonDialogsDemo_d.exp  CEGUICoreWindowRendererSet.exp  CEGUICoreWindowRendererSet_d.exp  CEGUIDemo6.exp  CEGUIDemo6_d.exp  CEGUIDirect3D10Renderer-0.exp  CEGUIDirect3D10Renderer-0_d.exp  CEGUIDirect3D11Renderer-0.exp  CEGUIDirect3D11Renderer-0_d.exp  CEGUIDirect3D9Renderer-0.exp  CEGUIDirect3D9Renderer-0_d.exp  CEGUIDragDropDemo.exp  CEGUIDragDropDemo_d.exp  CEGUIEditboxValidationDemo.exp  CEGUIEditboxValidationDemo_d.exp  CEGUIEffectsDemo.exp  CEGUIEffectsDemo_d.exp  CEGUIExpatParser.exp  CEGUIExpatParser_d.exp  CEGUIFontDemo.exp  CEGUIFontDemo_d.exp  CEGUIGameMenuDemo.exp  CEGUIGameMenuDemo_d.exp  CEGUIHUDDemo.exp  CEGUIHUDDemo_d.exp  CEGUIHelloWorldDemo.exp  CEGUIHelloWorldDemo_d.exp  CEGUIInventoryDemo.exp  CEGUIInventoryDemo_d.exp  CEGUILookNFeelOverviewDemo.exp  CEGUILookNFeelOverviewDemo_d.exp  CEGUIMinesweeper.exp  CEGUIMinesweeper_d.exp  CEGUIOpenGLRenderer-0.exp  CEGUIOpenGLRenderer-0_d.exp  (+12 more)
dependencies/lib/dynamic/: D3DX11Effects.lib  SILLY.exp  SILLY.lib  SILLY_d.exp  SILLY_d.lib  freeglut.exp  freeglut.lib  freeglutd.exp  freeglutd.lib  freetype.exp  freetype.lib  freetype_d.exp  freetype_d.lib  glew.exp  glew.lib  glew_d.exp  glew_d.lib  glfw.exp  glfw.lib  glfw_d.exp  glfw_d.lib  jpeg.exp  (+19 more)
helloworld/: CMakeLists.txt  main.cpp
(+21 files in other folders)
